string interpolation and property binding

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,8 +5,8 @@
             <hr>
             <app-server></app-server>
             <app-servers></app-servers>
-            <app-success-alert></app-success-alert>
-            <aap-warinig-alert></aap-warinig-alert>
+            <!-- <app-success-alert></app-success-alert> -->
+            <!-- <aap-warinig-alert></aap-warinig-alert> -->
         </div>
     </div>
 </div>
