innerText replaces stringinterpolation with property binding

--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -1,3 +1,3 @@
 <button class="btn btn-primary" [disabled]="!allowNewServers">Add Server</button>
-<p>{{allowNewServers}}</p>
+<p [innerText]="allowNewServers"></p>
 <p>servers works!</p>
