--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -1,3 +1,14 @@
-<button class="btn btn-primary" [disabled]="!allowNewServers">Add Server</button>
-<p [innerText]="allowNewServers"></p>
+<label>Server Name</label>
+<input
+    type="text"
+    class="form-control"
+    (input)="onUpdateServerName($event)">
+    <p>{{serverName}}</p>
+<button 
+    class="btn btn-primary" 
+    [disabled]="!allowNewServers"
+    (click)="onCreateServer()"
+    >Add Server</button>
+<p>{{serverCreationStatus}}</p>
+
 <p>servers works!</p>
