--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -10,10 +10,9 @@
     type="text"
     class="form-control"
     [(ngModel)]="serverName">
-    <p>{{serverName}}</p>
+    <!-- <p>{{serverName}}</p> -->
 <button 
     class="btn btn-primary" 
-    [disabled]="!allowNewServers"
     (click)="onCreateServer()"
     >Add Server</button>
 <p>{{serverCreationStatus}}</p>
