--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
             <hr>
             <app-server></app-server>
             <app-servers></app-servers>
-            <app-success-alert></app-success-alert>
+            <!-- <app-success-alert></app-success-alert> -->
             <!-- <aap-warinig-alert></aap-warinig-alert> -->
         </div>
     </div>
