--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,7 @@
             <h3>I'm in the app component</h3>
             <hr>
             <app-server></app-server>
+            <app-server></app-server>
             <app-servers></app-servers>
             <!-- <app-success-alert></app-success-alert> -->
             <!-- <aap-warinig-alert></aap-warinig-alert> -->
