--- a/src/app/server/server.component.html
+++ b/src/app/server/server.component.html
@@ -1,1 +1,3 @@
-<h3>The Server Component</h3>
+<p [ngStyle]="{backgroundColor:getcolor()}">
+    Server id: {{serverId}} is {{getServerStatus()}}
+</p>
