--- a/src/app/server/server.component.html
+++ b/src/app/server/server.component.html
@@ -1,3 +1,4 @@
-<p [ngStyle]="{backgroundColor:getcolor()}">
+<p [ngStyle]="{backgroundColor:getcolor()}"
+   [ngClass]="{online:serverStatus==='Online'}">
     Server id: {{serverId}} is {{getServerStatus()}}
 </p>
