--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,8 @@
 <div class="container">
     <div class="row">
         <div class="col-xs-12">
-            <h3>I'm in the app component</h3>
+            <app-recipes></app-recipes>
+            <app-shopping-list></app-shopping-list>
         </div>
     </div>
 </div>
